kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: courses-ingress
  namespace: courses
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: prgcourses.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: courses-service
                port:
                  number: 80
